# mcp-yoda

./: .gitignore  README.md  pyproject.toml  script.py  setup.sh  start.sh
src/: registry.py  sampler.py  server.py
src/tools/: quote_play.py
tests/: test_quote_play.py
