[project]
name = "mcp-yoda"
version = "0.1.0"
description = "Text to yoda voice, this is"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "mcp[cli]>=1.7.1",
    "requests>=2.31.0",
    "simpleaudio>=1.0.4",
    "pygame>=2.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
